[gd_scene load_steps=11 format=2]

[ext_resource path="res://src/core/web.gd" type="Script" id=1]
[ext_resource path="res://src/core/game.gd" type="Script" id=2]
[ext_resource path="res://fonts/Button_medium_Roboto.tres" type="DynamicFont" id=3]
[ext_resource path="res://fonts/Label_Small_Roboto.tres" type="DynamicFont" id=4]
[ext_resource path="res://fonts/Label_Big_Roboto.tres" type="DynamicFont" id=5]
[ext_resource path="res://gui/styles/Button.stylebox" type="StyleBox" id=6]
[ext_resource path="res://gui/styles/Button_pressed.stylebox" type="StyleBox" id=7]
[ext_resource path="res://gui/styles/Button_hover.stylebox" type="StyleBox" id=8]
[ext_resource path="res://gui/styles/Button_disabled.stylebox" type="StyleBox" id=10]

[sub_resource type="StyleBoxFlat" id=1]
bg_color = Color( 0.184314, 0.184314, 0.184314, 1 )

[node name="game" type="Node"]
script = ExtResource( 2 )

[node name="web" type="Node" parent="." groups=[
"persistent",
]]
script = ExtResource( 1 )

[node name="News_HTTPRequest" type="HTTPRequest" parent="web"]

[node name="Forms_HTTPRequest" type="HTTPRequest" parent="web"]

[node name="Images_HTTPRequest" type="HTTPRequest" parent="web"]

[node name="Web_CanvasLayer" type="CanvasLayer" parent="web"]

[node name="Web_Menu" type="Control" parent="web/Web_CanvasLayer"]
anchor_right = 1.0
anchor_bottom = 1.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="MarginContainer" type="MarginContainer" parent="web/Web_CanvasLayer/Web_Menu"]
anchor_right = 1.0
anchor_bottom = 1.0
custom_constants/margin_right = 100
custom_constants/margin_top = 50
custom_constants/margin_left = 100
custom_constants/margin_bottom = 50
__meta__ = {
"_edit_use_anchors_": false
}

[node name="PanelContainer" type="PanelContainer" parent="web/Web_CanvasLayer/Web_Menu/MarginContainer"]
self_modulate = Color( 0.501961, 0.501961, 0.501961, 1 )
margin_left = 100.0
margin_top = 50.0
margin_right = 924.0
margin_bottom = 550.0

[node name="VBoxContainer" type="VBoxContainer" parent="web/Web_CanvasLayer/Web_Menu/MarginContainer/PanelContainer"]
margin_left = 7.0
margin_top = 7.0
margin_right = 817.0
margin_bottom = 493.0
custom_constants/separation = 10

[node name="HBoxContainer" type="HBoxContainer" parent="web/Web_CanvasLayer/Web_Menu/MarginContainer/PanelContainer/VBoxContainer"]
margin_right = 810.0
margin_bottom = 408.0
size_flags_horizontal = 3
size_flags_vertical = 3
custom_constants/separation = 50

[node name="PanelContainer" type="PanelContainer" parent="web/Web_CanvasLayer/Web_Menu/MarginContainer/PanelContainer/VBoxContainer/HBoxContainer"]
margin_right = 362.0
margin_bottom = 408.0
size_flags_horizontal = 3
size_flags_vertical = 3
custom_styles/panel = ExtResource( 6 )

[node name="VBoxContainer" type="VBoxContainer" parent="web/Web_CanvasLayer/Web_Menu/MarginContainer/PanelContainer/VBoxContainer/HBoxContainer/PanelContainer"]
margin_left = 5.0
margin_top = 5.0
margin_right = 357.0
margin_bottom = 403.0
size_flags_horizontal = 3
custom_constants/separation = 10

[node name="Web_News" type="Label" parent="web/Web_CanvasLayer/Web_Menu/MarginContainer/PanelContainer/VBoxContainer/HBoxContainer/PanelContainer/VBoxContainer"]
margin_right = 352.0
margin_bottom = 71.0
custom_fonts/font = ExtResource( 5 )
text = "Web News"
align = 1
valign = 1

[node name="MarginContainer2" type="MarginContainer" parent="web/Web_CanvasLayer/Web_Menu/MarginContainer/PanelContainer/VBoxContainer/HBoxContainer/PanelContainer/VBoxContainer"]
margin_top = 81.0
margin_right = 352.0
margin_bottom = 342.0
size_flags_horizontal = 3
size_flags_vertical = 3
custom_constants/margin_right = 10
custom_constants/margin_top = 10
custom_constants/margin_left = 10
custom_constants/margin_bottom = 10

[node name="PanelContainer" type="PanelContainer" parent="web/Web_CanvasLayer/Web_Menu/MarginContainer/PanelContainer/VBoxContainer/HBoxContainer/PanelContainer/VBoxContainer/MarginContainer2"]
self_modulate = Color( 0.431373, 0.431373, 0.431373, 1 )
margin_left = 10.0
margin_top = 10.0
margin_right = 342.0
margin_bottom = 251.0

[node name="MarginContainer" type="MarginContainer" parent="web/Web_CanvasLayer/Web_Menu/MarginContainer/PanelContainer/VBoxContainer/HBoxContainer/PanelContainer/VBoxContainer/MarginContainer2/PanelContainer"]
margin_left = 7.0
margin_top = 7.0
margin_right = 325.0
margin_bottom = 234.0
custom_constants/margin_right = 5
custom_constants/margin_top = 5
custom_constants/margin_left = 5
custom_constants/margin_bottom = 5

[node name="VBoxContainer" type="VBoxContainer" parent="web/Web_CanvasLayer/Web_Menu/MarginContainer/PanelContainer/VBoxContainer/HBoxContainer/PanelContainer/VBoxContainer/MarginContainer2/PanelContainer/MarginContainer"]
margin_left = 5.0
margin_top = 5.0
margin_right = 313.0
margin_bottom = 222.0

[node name="News_Image" type="TextureRect" parent="web/Web_CanvasLayer/Web_Menu/MarginContainer/PanelContainer/VBoxContainer/HBoxContainer/PanelContainer/VBoxContainer/MarginContainer2/PanelContainer/MarginContainer/VBoxContainer"]
margin_right = 308.0
margin_bottom = 80.0
rect_min_size = Vector2( 0, 80 )
expand = true
stretch_mode = 5

[node name="News_Text" type="RichTextLabel" parent="web/Web_CanvasLayer/Web_Menu/MarginContainer/PanelContainer/VBoxContainer/HBoxContainer/PanelContainer/VBoxContainer/MarginContainer2/PanelContainer/MarginContainer/VBoxContainer"]
margin_top = 84.0
margin_right = 308.0
margin_bottom = 217.0
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="Get_Web_News_Button" type="Button" parent="web/Web_CanvasLayer/Web_Menu/MarginContainer/PanelContainer/VBoxContainer/HBoxContainer/PanelContainer/VBoxContainer"]
margin_top = 352.0
margin_right = 352.0
margin_bottom = 398.0
custom_styles/hover = ExtResource( 8 )
custom_styles/pressed = ExtResource( 7 )
custom_styles/disabled = ExtResource( 10 )
custom_styles/normal = ExtResource( 6 )
custom_fonts/font = ExtResource( 3 )
custom_colors/font_color_disabled = Color( 0.862745, 0.862745, 0.862745, 1 )
text = "Get Web News"

[node name="PanelContainer2" type="PanelContainer" parent="web/Web_CanvasLayer/Web_Menu/MarginContainer/PanelContainer/VBoxContainer/HBoxContainer"]
margin_left = 412.0
margin_right = 810.0
margin_bottom = 408.0
size_flags_horizontal = 3
size_flags_vertical = 3
custom_styles/panel = ExtResource( 6 )

[node name="VBoxContainer2" type="VBoxContainer" parent="web/Web_CanvasLayer/Web_Menu/MarginContainer/PanelContainer/VBoxContainer/HBoxContainer/PanelContainer2"]
margin_left = 5.0
margin_top = 5.0
margin_right = 393.0
margin_bottom = 403.0
size_flags_horizontal = 3
custom_constants/separation = 10

[node name="Web_Forms" type="Label" parent="web/Web_CanvasLayer/Web_Menu/MarginContainer/PanelContainer/VBoxContainer/HBoxContainer/PanelContainer2/VBoxContainer2"]
margin_right = 388.0
margin_bottom = 71.0
custom_fonts/font = ExtResource( 5 )
text = "Web Forms"
align = 1
valign = 1

[node name="MarginContainer" type="MarginContainer" parent="web/Web_CanvasLayer/Web_Menu/MarginContainer/PanelContainer/VBoxContainer/HBoxContainer/PanelContainer2/VBoxContainer2"]
margin_top = 81.0
margin_right = 388.0
margin_bottom = 342.0
size_flags_horizontal = 3
size_flags_vertical = 3
custom_constants/margin_right = 10
custom_constants/margin_top = 10
custom_constants/margin_left = 10
custom_constants/margin_bottom = 10

[node name="PanelContainer" type="PanelContainer" parent="web/Web_CanvasLayer/Web_Menu/MarginContainer/PanelContainer/VBoxContainer/HBoxContainer/PanelContainer2/VBoxContainer2/MarginContainer"]
margin_left = 10.0
margin_top = 10.0
margin_right = 378.0
margin_bottom = 251.0
custom_styles/panel = ExtResource( 6 )

[node name="MarginContainer" type="MarginContainer" parent="web/Web_CanvasLayer/Web_Menu/MarginContainer/PanelContainer/VBoxContainer/HBoxContainer/PanelContainer2/VBoxContainer2/MarginContainer/PanelContainer"]
margin_left = 5.0
margin_top = 5.0
margin_right = 363.0
margin_bottom = 236.0
custom_constants/margin_right = 5
custom_constants/margin_top = 5
custom_constants/margin_left = 5
custom_constants/margin_bottom = 5

[node name="VBoxContainer" type="VBoxContainer" parent="web/Web_CanvasLayer/Web_Menu/MarginContainer/PanelContainer/VBoxContainer/HBoxContainer/PanelContainer2/VBoxContainer2/MarginContainer/PanelContainer/MarginContainer"]
margin_left = 5.0
margin_top = 5.0
margin_right = 353.0
margin_bottom = 226.0
custom_constants/separation = 10

[node name="HBoxContainer" type="HBoxContainer" parent="web/Web_CanvasLayer/Web_Menu/MarginContainer/PanelContainer/VBoxContainer/HBoxContainer/PanelContainer2/VBoxContainer2/MarginContainer/PanelContainer/MarginContainer/VBoxContainer"]
margin_right = 348.0
margin_bottom = 24.0

[node name="CheckBox_Feedback" type="CheckBox" parent="web/Web_CanvasLayer/Web_Menu/MarginContainer/PanelContainer/VBoxContainer/HBoxContainer/PanelContainer2/VBoxContainer2/MarginContainer/PanelContainer/MarginContainer/VBoxContainer/HBoxContainer"]
margin_right = 24.0
margin_bottom = 24.0
pressed = true

[node name="Label" type="Label" parent="web/Web_CanvasLayer/Web_Menu/MarginContainer/PanelContainer/VBoxContainer/HBoxContainer/PanelContainer2/VBoxContainer2/MarginContainer/PanelContainer/MarginContainer/VBoxContainer/HBoxContainer"]
margin_left = 28.0
margin_right = 115.0
margin_bottom = 24.0
custom_fonts/font = ExtResource( 4 )
text = "Feedback"

[node name="CheckBox_Bugreport" type="CheckBox" parent="web/Web_CanvasLayer/Web_Menu/MarginContainer/PanelContainer/VBoxContainer/HBoxContainer/PanelContainer2/VBoxContainer2/MarginContainer/PanelContainer/MarginContainer/VBoxContainer/HBoxContainer"]
margin_left = 119.0
margin_right = 143.0
margin_bottom = 24.0

[node name="Label2" type="Label" parent="web/Web_CanvasLayer/Web_Menu/MarginContainer/PanelContainer/VBoxContainer/HBoxContainer/PanelContainer2/VBoxContainer2/MarginContainer/PanelContainer/MarginContainer/VBoxContainer/HBoxContainer"]
margin_left = 147.0
margin_right = 236.0
margin_bottom = 24.0
custom_fonts/font = ExtResource( 4 )
text = "Bugreport"

[node name="CheckBox_Question" type="CheckBox" parent="web/Web_CanvasLayer/Web_Menu/MarginContainer/PanelContainer/VBoxContainer/HBoxContainer/PanelContainer2/VBoxContainer2/MarginContainer/PanelContainer/MarginContainer/VBoxContainer/HBoxContainer"]
margin_left = 240.0
margin_right = 264.0
margin_bottom = 24.0

[node name="Label3" type="Label" parent="web/Web_CanvasLayer/Web_Menu/MarginContainer/PanelContainer/VBoxContainer/HBoxContainer/PanelContainer2/VBoxContainer2/MarginContainer/PanelContainer/MarginContainer/VBoxContainer/HBoxContainer"]
margin_left = 268.0
margin_right = 348.0
margin_bottom = 24.0
custom_fonts/font = ExtResource( 4 )
text = "Question"

[node name="HSeparator" type="HSeparator" parent="web/Web_CanvasLayer/Web_Menu/MarginContainer/PanelContainer/VBoxContainer/HBoxContainer/PanelContainer2/VBoxContainer2/MarginContainer/PanelContainer/MarginContainer/VBoxContainer"]
margin_top = 34.0
margin_right = 348.0
margin_bottom = 39.0
custom_constants/separation = 5

[node name="Feedback_TextEdit" type="TextEdit" parent="web/Web_CanvasLayer/Web_Menu/MarginContainer/PanelContainer/VBoxContainer/HBoxContainer/PanelContainer2/VBoxContainer2/MarginContainer/PanelContainer/MarginContainer/VBoxContainer"]
margin_top = 49.0
margin_right = 348.0
margin_bottom = 221.0
size_flags_horizontal = 3
size_flags_vertical = 3
custom_styles/normal = SubResource( 1 )
smooth_scrolling = true
wrap_enabled = true

[node name="Send_Form_Button" type="Button" parent="web/Web_CanvasLayer/Web_Menu/MarginContainer/PanelContainer/VBoxContainer/HBoxContainer/PanelContainer2/VBoxContainer2"]
margin_top = 352.0
margin_right = 388.0
margin_bottom = 398.0
custom_styles/hover = ExtResource( 8 )
custom_styles/pressed = ExtResource( 7 )
custom_styles/disabled = ExtResource( 10 )
custom_styles/normal = ExtResource( 6 )
custom_fonts/font = ExtResource( 3 )
custom_colors/font_color_disabled = Color( 0.862745, 0.862745, 0.862745, 1 )
text = "Send Form Data"

[node name="CenterContainer" type="CenterContainer" parent="web/Web_CanvasLayer/Web_Menu/MarginContainer/PanelContainer/VBoxContainer"]
margin_top = 418.0
margin_right = 810.0
margin_bottom = 462.0

[node name="Check_Web_Requests" type="CheckButton" parent="web/Web_CanvasLayer/Web_Menu/MarginContainer/PanelContainer/VBoxContainer/CenterContainer"]
margin_left = 228.0
margin_right = 581.0
margin_bottom = 44.0
custom_fonts/font = ExtResource( 3 )
text = "Allow Web Requests"
align = 1

[node name="Version" type="Label" parent="web/Web_CanvasLayer/Web_Menu/MarginContainer/PanelContainer/VBoxContainer"]
margin_top = 472.0
margin_right = 810.0
margin_bottom = 486.0
align = 1
valign = 1
[connection signal="pressed" from="web/Web_CanvasLayer/Web_Menu/MarginContainer/PanelContainer/VBoxContainer/HBoxContainer/PanelContainer/VBoxContainer/Get_Web_News_Button" to="web" method="_on_Get_Web_News_Button_pressed"]
[connection signal="pressed" from="web/Web_CanvasLayer/Web_Menu/MarginContainer/PanelContainer/VBoxContainer/HBoxContainer/PanelContainer2/VBoxContainer2/MarginContainer/PanelContainer/MarginContainer/VBoxContainer/HBoxContainer/CheckBox_Feedback" to="web" method="_on_CheckBox_Feedback_pressed"]
[connection signal="pressed" from="web/Web_CanvasLayer/Web_Menu/MarginContainer/PanelContainer/VBoxContainer/HBoxContainer/PanelContainer2/VBoxContainer2/MarginContainer/PanelContainer/MarginContainer/VBoxContainer/HBoxContainer/CheckBox_Bugreport" to="web" method="_on_CheckBox_Bugreport_pressed"]
[connection signal="pressed" from="web/Web_CanvasLayer/Web_Menu/MarginContainer/PanelContainer/VBoxContainer/HBoxContainer/PanelContainer2/VBoxContainer2/MarginContainer/PanelContainer/MarginContainer/VBoxContainer/HBoxContainer/CheckBox_Question" to="web" method="_on_CheckBox_Question_pressed"]
[connection signal="pressed" from="web/Web_CanvasLayer/Web_Menu/MarginContainer/PanelContainer/VBoxContainer/HBoxContainer/PanelContainer2/VBoxContainer2/Send_Form_Button" to="web" method="_on_Send_Form_Button_pressed"]
[connection signal="pressed" from="web/Web_CanvasLayer/Web_Menu/MarginContainer/PanelContainer/VBoxContainer/CenterContainer/Check_Web_Requests" to="web" method="_on_Check_Web_Requests_pressed"]
